2010-06-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Use standard C header names in tests.

	* 2_lib/alloca/a1.c,
	* 2_lib/alloca/a2.c,
	* 2_lib/alloca/a3.c,
	* 2_lib/assert.c,
	* 2_lib/clock.c,
	* 2_lib/div/div.c,
	* 2_lib/div/div2.c,
	* 2_lib/malloc/m1.c,
	* 2_lib/malloc/m2.c,
	* 2_lib/malloc/m3.c,
	* 2_lib/math/avail.c,
	* 2_lib/math/tgamma.c,
	* 2_lib/perf.c,
	* 2_lib/sac1.c,
	* 2_lib/va.c,
	* 2_lib/va2.c,
	* 2_lib/va3.c: Do it.

2010-05-30  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the test suite.

	* 0_slc/2_usegp/indcreate.c: Use the new syntax for function
	pointer declarations.

	* 0_slc/0_trivial/str.c,
	* 0_slc/2_usegp/fptr.c,
	* 0_slc/2_usegp/indcreate2.c,
	* 0_slc/4_funcalls/createinfun.c,
	* 0_slc/4_vlas/bigarray3.c,
	* 0_slc/4_vlas/bigarray4.c: New.

2010-05-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the test suite.

	* 0_slc/4_vlas/bigarray2.c: New. This exercises a compiler bug
	where a forbidden register may be used upon stack unwinding.

2010-05-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix one unit test.	

	* 0_slc/1_createargs/useexit2.c: Use the new `delegate.h' and
	constant names. Remove reference to family ID.

2010-05-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the math tests.

	* 2_lib/math/avail.c: Fix saving of results. Configure more `slt'
	runs.

	* 2_lib/math/tgamma.c: Copy results to variables before
	printing. Configuremore `slt' runs.

2010-05-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Sanitize the test suite to prepare for the new compiler.

	* 0_slc/2_usegp/crdefaults.c,
	* 0_slc/1_createargs/argshadow.c,
	* 0_slc/1_create/cr1.c: Remove references to the family ID.

	* 0_slc/1_create/fididreuse.c: Remove (feature not supported any
	more).

	* 0_slc/4_vlas/idxvla.c: Place test into separate thread function
	than `t_main', since the latter may not have a thread index.

2010-04-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update copyright notice of files changed in 2010.
